--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title: Emerald | A simple Jekyll blog
 description: "A minimal blog template, build with Jekyll."
-url: "http://alihendavi.github.io/note"
+url: "www.jacoporabolini.com"
 author:
   name: "Jacopo Rabolini"
   email: "hello@jacoporabolini.com"
   url: " http://www.jacoporabolini.com/emerald"
 
 # Build settings
-baseurl: /emerald/ # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: /note/ # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
