--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Emerald | A simple Jekyll blog
+title: Ali Hendavi's notes
 description: "A minimal blog template, build with Jekyll."
 url: "www.jacoporabolini.com"
 author:
